XMLtoCSV/objects/unpackaged/objects/Sample_Transaction_vod__c.object
<CustomObject>
    <description>Sample Transaction maintains and controls all transactional data related to Samples for PDMA and FDA compliance.</description>
    <fields>
        <fullName>ASSMCA_vod__c</fullName>
        <description>The ASSMCA field stores the ASSMCA # for Sample Disbursement Transactions in Puerto Rico.</description>
        <label>ASSMCA</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Account field stores the reference to the Account for a Sample Disbursement.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sample Transactions</relationshipLabel>
        <relationshipName>Sample_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address_Line_1_vod__c</fullName>
        <description>Address Line 1 is the first line of the Address for Return, Transfer, and Disbursement Sample Transactions.  Address Line 1 for a Transfer To Sample Transaction is auto-populated based on the Selected Transfer To user and their corresponding record in the Rep Roster.</description>
        <label>Address Line 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2_vod__c</fullName>
        <description>Address Line 2 is the second line of the Address for Return, Transfer, and Disbursement Sample Transactions.  Address Line 1 for a Transfer To Sample Transaction is auto-populated based on the Selected Transfer To user and their corresponding record in the Rep Roster.</description>
        <label>Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adjust_For_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Adjust For represents the User that the Adjustment or Return Sample Transaction was performed for.</description>
        <label>Adjust For</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00Nd00000078lwPEAQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Adjusted_Date_vod__c</fullName>
        <description>Adjusted Date is the effective date of an Adjustment Sample Transaction.</description>
        <label>Adjusted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CDS_Expiration_Date_vod__c</fullName>
        <description>The expiration date of the CDS registration number for the call.</description>
        <label>CDS Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CDS_vod__c</fullName>
        <description>The CDS registration number for the corresponding state of the call address.</description>
        <label>CDS #</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Date_vod__c</fullName>
        <description>The Call Date field stores the Date of the Call for a Sample Disbursement Transaction.</description>
        <label>Call Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Call_Datetime_vod__c</fullName>
        <description>The Call Date field stores the Date and time of the Call for a Sample Disbursement Transaction.</description>
        <label>Call Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Call_Name_vod__c</fullName>
        <description>Call Name is the Name of the Call Header record that a Disbursement Sample Transaction is related to. This field is populated from a Call by the Call_Header_trigger_vod trigger.</description>
        <label>Call Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_vod__c</fullName>
        <description>City is the City of the Address for Return, Transfer, and Disbursement Sample Transactions. For a Transfer To Sample Transaction, this field is auto-populated based on the Selected Transfer To user and their corresponding record in the Rep Roster.</description>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cold_Chain_Status_vod__c</fullName>
        <description>The Cold Chain Status for the corresponding Sample line item. Only pertains to samples that have been designated as cold chain product via the Product Catalog.</description>
        <label>Cold Chain Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Range</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not In Range</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments_vod__c</fullName>
        <description>Comments contain comments captured for all Sample Transaction types.</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Confirmed_Quantity_vod__c</fullName>
        <description>Confirmed Quantity represents the quantity of Samples that have been confirmed by a User from a Transfer Sample Transaction.</description>
        <label>Confirmed Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credentials_vod__c</fullName>
        <description>The credentials of the Account signing for a sample</description>
        <label>Credentials</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Text_vod__c</fullName>
        <description>Custom text captured for the corresponding product line item. Only pertains to product that have been flagged to allow capture of custom text via the Product Catalog.</description>
        <label>Custom Text</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DEA_Expiration_Date_vod__c</fullName>
        <description>The DEA Expiration Date stores the Expiration Date of the DEA License for the Physician receving Controlled Substance Samples.</description>
        <label>DEA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DEA_vod__c</fullName>
        <description>The DEA # stores the DEA License # for the Physician receving Controlled Substance Samples.</description>
        <label>DEA #</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disbursed_To_vod__c</fullName>
        <description>Disbursed To represents the concatenated fields of Account Name, Account Title, Account License, Call Address and Call Date for a Disbursement Sample Transaction. This field is populated from a Call by the Call_Header_trigger_vod trigger.</description>
        <label>Disbursed To</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Disclaimer_vod__c</fullName>
        <description>Disclaimer represents the Disclaimer from VoD Message that was displayed to the Signee upon signature for a Disbursement Sample Transaction. This field is populated from a Call by the Call_Header_trigger_vod trigger.</description>
        <label>Disclaimer</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Discrepancy_vod__c</fullName>
        <description>Discrepancy represents the calculated difference between the Quantity and Confirmed Quantity for a Sample Transaction.  The Discrepancy field can be utilized to report on Sample Transactions where a Discrepancy has occurred.</description>
        <formula>IF(AND(ISPICKVAL(Type_vod__c  ,&quot;Transfer_vod&quot;), ISPICKVAL(Status_vod__c ,&quot;Submitted_vod&quot;), Received_vod__c ) ,Quantity_vod__c - NULLVALUE(Confirmed_Quantity_vod__c,0), 
IF(AND(ISPICKVAL(Type_vod__c ,&quot;Receipt_vod&quot;), ISPICKVAL(Status_vod__c ,&quot;Submitted_vod&quot;)) , Quantity_vod__c - NULLVALUE(Confirmed_Quantity_vod__c,0), 0))</formula>
        <label>Discrepancy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Distributor_vod__c</fullName>
        <label>Distributor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Identifier_vod__c</fullName>
        <description>If present, this is the group identifier for a grouped transaction, otherwise it&apos;s just the transaction id.</description>
        <formula>IF(LEN(Group_Transaction_Id_vod__c) &gt; 0,Group_Transaction_Id_vod__c, Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Transaction_Id_vod__c</fullName>
        <description>Group Transaction Id vod field acts as an identifier grouping multiple Sample Transactions together as a Group Transaction.</description>
        <externalId>true</externalId>
        <label>Group Transaction Id vod</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inventory_Impact_Quantity_vod__c</fullName>
        <description>Inventory Impact Quantity is the formula that defines the impact that the Quantity and Confirmed Quantity have for a specific Transaction Type.  The Inventory Impact is summed by Sample Inventories to identify Expected Quantities for a given Sample Lot.</description>
        <formula>IF(AND(ISPICKVAL(  Type_vod__c ,&quot;Disbursement_vod&quot;), ISPICKVAL(Status_vod__c ,&quot;Submitted_vod&quot;) ),- Quantity_vod__c, 
IF(AND(ISPICKVAL(Type_vod__c ,&quot;Transfer_vod&quot;),ISPICKVAL(Status_vod__c, &quot;Submitted_vod&quot;) ),- Quantity_vod__c, 
IF(AND(ISPICKVAL(Type_vod__c ,&quot;Receipt_vod&quot;),ISPICKVAL(Status_vod__c, &quot;Submitted_vod&quot;) ), Confirmed_Quantity_vod__c , 
IF(AND(ISPICKVAL(Type_vod__c ,&quot;Return_vod&quot;),ISPICKVAL(Status_vod__c, &quot;Submitted_vod&quot;) ), -Quantity_vod__c , 
IF(AND(ISPICKVAL(Type_vod__c ,&quot;Adjustment_vod&quot;),ISPICKVAL(Status_vod__c ,&quot;Submitted_vod&quot; )), Quantity_vod__c ,0)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inventory Impact Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>License_Expiration_Date_vod__c</fullName>
        <description>The License Expiration Date field stores the Practitioner&apos;s State License Expiration Date that signed for Samples.</description>
        <label>License Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Status_vod__c</fullName>
        <description>The License Status field stores the current Status of the Practitioner&apos;s State License at the time the Signature was captured for Samples.</description>
        <label>License Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_vod__c</fullName>
        <description>Sample License # of the account.</description>
        <label>License #</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lot_Name_vod__c</fullName>
        <description>Lot # Name is the textual representation of the Lot # for the Sample Transaction.</description>
        <label>Lot # Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lot_vod__c</fullName>
        <description>Lot # represents the Lot # of the Sample for the Sample Transaction.  Lot # is the child of the Master-child relationship between Sample Lot and Sample Transaction.</description>
        <label>Lot #</label>
        <referenceTo>Sample_Lot_vod__c</referenceTo>
        <relationshipLabel>Sample Transactions</relationshipLabel>
        <relationshipName>Sample_Transaction_vod</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Manufacturer_vod__c</fullName>
        <description>The name of the manufacturer of the sampled product</description>
        <label>Manufacturer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity_vod__c</fullName>
        <description>Quantity is the amount of Sample that has been transacted for a Sample Transaction.</description>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason_vod__c</fullName>
        <description>Reason represents the type of Adjustment Sample Transaction being performed.</description>
        <label>Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stolen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Destroyed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Receipt_Comments_vod__c</fullName>
        <description>Receipt Comments are the comments that are collected for a Receipt Sample Transaction.</description>
        <label>Receipt Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Received_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The Received checkbox identifies if a Transfer Sample Transaction has been received by the Recipient.  The Received Checkbox is utilized by the Discrepancy Formula to determine if a Discrepancy should be identified for a Transfer Sample Transaction based on if it has been received.</description>
        <label>Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ref_Transaction_Id_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Ref Transaction Id provides a relationship between related Sample Transactions, such as a Transfer and Receipt.</description>
        <label>Ref Transaction Id</label>
        <referenceTo>Sample_Transaction_vod__c</referenceTo>
        <relationshipLabel>Sample Transactions</relationshipLabel>
        <relationshipName>R00Nd00000078lxZEAQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Receipt_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is checked when a physician requests a receipt.</description>
        <label>Request Receipt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Return_To_vod__c</fullName>
        <description>Return To is the recipient of a Return Sample Transaction.  The Picklist values for the Return To field can be updated to meet the organization&apos;s needs.</description>
        <label>Return To</label>
        <picklist>
            <picklistValues>
                <fullName>HQ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Salutation_vod__c</fullName>
        <description>The salutation of the Account signing for a sample</description>
        <label>Salutation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sample_Card_Reason_vod__c</fullName>
        <description>The Sample Card Reason field stores the reason a Sample Card was leveraged on a Sample Disbursement.</description>
        <label>Sample Card Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Laptop Unavailable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Unavailable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sample_Card_vod__c</fullName>
        <description>Sample Card # represents the Sample Card Identifier for a Paper Disbursement Receipt. This field is populated from a Call by the Call_Header_trigger_vod trigger.</description>
        <label>Sample Card #</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sample_vod__c</fullName>
        <description>Sample represents the Sample for the Sample Transaction.</description>
        <label>Sample</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_ID_vod__c</fullName>
        <description>Shipment Id represents a 3rd Party shipping id if Receipt Sample Transactions for users are being created by a back-office or distribution center.</description>
        <label>Shipment Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signature_Date_vod__c</fullName>
        <description>Signature Date represents the exact date and time that the Signature was captured for a Disbursement Sample Transaction. This field is populated from a Call by the Call_Header_trigger_vod trigger.</description>
        <label>Signature Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Signature_Page_Display_Name_vod__c</fullName>
        <description>The value of the Account.Signature_Page_Display_Name_vod at the time of Signature Capture.</description>
        <label>Signature Page Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signature_vod__c</fullName>
        <description>Signature contains the Signature image converted to text for a Disbursement Sample Transaction. This field is populated from a Call by the Call_Header_trigger_vod trigger.</description>
        <label>Signature</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>State_vod__c</fullName>
        <description>State is the State of the Address for Return, Transfer, and Disbursement Sample Transactions. For a Transfer To Sample Transaction, this field is auto-populated based on the Selected Transfer To user and their corresponding record in the Rep Roster.</description>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_vod__c</fullName>
        <description>Status represents the current status of the Sample Transaction.  Sample Transactions with a status of Submitted are not able to be edited or deleted, unless a user has access to the Unlock checkbox for the Sample Transaction.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Saved_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submitted_Date_vod__c</fullName>
        <description>Submitted Date is the date when the Sample Transaction was set to a status of Submitted.</description>
        <label>Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tag_Alert_Number_vod__c</fullName>
        <description>The Tag Alert Number for the corresponding Sample line item. Only pertains to samples that have been designated as cold chain product via the Product Catalog.</description>
        <label>Tag Alert Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transfer_To_Name_vod__c</fullName>
        <description>Transfer To represents the textual Username that is the recipient of the Transfer Sample Transaction.</description>
        <label>Transfer To Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transfer_To_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Transfer To represents the User that is the recipient of the Transfer Sample Transaction.  The selection of a User from the Transfer To, identifies the User from the Rep Roster based on the Username Id field and auto-populates the address fields for the Transfer Sample Transaction based on the Rep Roster address fields.</description>
        <label>Transfer To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00Nd00000078lwxEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transferred_Date_vod__c</fullName>
        <description>Transferred Date is the effective date that a Transfer Sample Transaction occurred.</description>
        <label>Transferred Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transferred_From_Name_vod__c</fullName>
        <description>Transferred From Name is the textual representation of the User that a Transfer Sample Transaction is being performed for.</description>
        <label>Transferred From Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transferred_From_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Transferred From represents the User that a Transfer Sample Transaction is being performed for.</description>
        <label>Transferred From</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00Nd00000078lwdEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type_vod__c</fullName>
        <description>Type represents the Type of the Sample Transaction record.  The Type picklist mirrors the Record Type of the Sample Transaction and is filtered and defaulted based on Record Type of the Sample Transaction.</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Adjustment_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disbursement_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Receipt_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Return_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>U_M_vod__c</fullName>
        <description>U/M represents the Unit of Measurement of the Sample Lot for the Sample Transaction.</description>
        <label>U/M</label>
        <picklist>
            <picklistValues>
                <fullName>Cases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boxes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unlock_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Unlock checkbox is used by the VBioPharma application to determine if a user has access to Unlock a Sample Transaction that has been Submitted. Access is controlled by Field Level security on the Unlock checkbox.</description>
        <label>Unlock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zip_4_vod__c</fullName>
        <description>This is the zip 4 of the Address for Return Transfer and Disbursement Sample Transactions. For a Transfer To Sample Transaction this field is auto-populated based on the Selected Transfer To user and their corresponding record in the Rep Roster.</description>
        <label>Zip 4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_vod__c</fullName>
        <description>Zip is the zip code of the Address for Return, Transfer, and Disbursement Sample Transactions. For a Transfer To Sample Transaction, this field is auto-populated based on the Selected Transfer To user and their corresponding record in the Rep Roster.</description>
        <label>Zip</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zvod_Sample_Lines_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>placeholder for displaying multi-line sample transactions</description>
        <label>zvod Sample Lines vod</label>
        <type>Checkbox</type>
    </fields>
    <label>Sample Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AllTransactions</fullName>
        <columns>NAME</columns>
        <columns>Type_vod__c</columns>
        <columns>Sample_vod__c</columns>
        <columns>Lot_vod__c</columns>
        <columns>Quantity_vod__c</columns>
        <columns>Confirmed_Quantity_vod__c</columns>
        <columns>Transferred_From_vod__c</columns>
        <columns>Transfer_To_vod__c</columns>
        <columns>Disbursed_To_vod__c</columns>
        <columns>Status_vod__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Transactions</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ST-{0000000}</displayFormat>
        <label>Transaction Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sample Transactions</pluralLabel>
    <recordTypes>
        <fullName>Adjustment_vod</fullName>
        <active>true</active>
        <description>The Adjustment Record Type provides the ability to report destroyed, stolen, or expired Sample Transactions</description>
        <label>Adjustment_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Disbursement_vod</fullName>
        <active>true</active>
        <description>The Disbursement Record Type provides a read-only view of a Sample Disbursement to an Account</description>
        <label>Disbursement_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Receipt_vod</fullName>
        <active>true</active>
        <description>The Receipt Record Type provides the ability to receive Samples either from another user or from a fullfillment center.</description>
        <label>Receipt_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Return_vod</fullName>
        <active>true</active>
        <description>The Return Record Type provides the ability to report returned Sample Transactions</description>
        <label>Return_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Transfer_vod</fullName>
        <active>true</active>
        <description>The Transfer Record Type provides the ability to transfer Samples to another user.</description>
        <label>Transfer_vod</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Return_Quantity_vod</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL(Type_vod__c, &quot;Return_vod&quot;) ,Quantity_vod__c &lt; 1)</errorConditionFormula>
        <errorDisplayField>Quantity_vod__c</errorDisplayField>
        <errorMessage>Error: Quantity &gt; 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Transfer_Quantity_vod</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL(Type_vod__c, &quot;Transfer_vod&quot;) ,Quantity_vod__c &lt; 1)</errorConditionFormula>
        <errorDisplayField>Quantity_vod__c</errorDisplayField>
        <errorMessage>Error: Quantity &gt; 0</errorMessage>
    </validationRules>
</CustomObject>